--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -10,7 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: clamp(15px, 3.5vw, 30px);
+  font-size: clamp(15px, 5vw, 30px);
   padding: 20px;
   color: white;
 }
@@ -18,10 +18,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: clamp(15px, 3.5vw, 30px);
+  font-size: clamp(15px, 5vw, 30px);
   padding: 20px;
   flex-direction: column;
   color: white;
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: center;
 }
 .mail{
   text-decoration: none;
