--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -5,7 +5,7 @@
   padding: 10px;
 }
 .nav li{
-  font-size: clamp(15px, 3.5vw, 30px);
+  font-size: clamp(15px, 5vw, 30px);
   padding: 5px;
   cursor: pointer;
 }
