--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: clamp(15px, 3.5vw, 30px);
+  font-size: clamp(15px, 5.5vw, 30px);
   padding: 20px;
 }
 .projects-slideshow{
@@ -40,7 +40,7 @@
   border-radius: 5px;
   width: max-content;
   margin: 3px;
-  font-size: clamp(12px, 2.5vw, 22px);
+  font-size: clamp(12px, 5vw, 22px);
 }
 .slide-link{
   background-color: var(--color-b); 
@@ -49,7 +49,7 @@
   width: max-content;
   border-radius: 5px;
   margin: 3px;
-  font-size: clamp(12px, 2.5vw, 22px);
+  font-size: clamp(12px, 4.5vw, 22px);
 }
 .view-more{
   align-self: center;
@@ -59,7 +59,7 @@
   border: 0;
   border-radius: 5px;
   padding: 15px;
-  font-size: clamp(12px, 3vw, 25px);
+  font-size: clamp(12px, 5vw, 25px);
 }
 .view-more:hover{
   background-color: rgb(80, 80, 80);
