--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: clamp(15px, 3.5vw, 30px);
+  font-size: clamp(15px, 5.5vw, 30px);
   padding: 10px;
 }
 .skills-container li{
